k8s/baremetal/07-fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi
  namespace: fastapi
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi.dimarino.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 80
